import des codes

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -1,15 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ce code sert à transformer les masques en bounding boxes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CSV généré: bounding_boxes.csv\n"
+      "CSV généré: bounding_boxes_all.csv\n"
      ]
     }
    ],
@@ -20,22 +27,33 @@
     "import numpy as np\n",
     "\n",
     "# Dossier contenant les images PNG\n",
-    "input_folder = \"sequences-train\"\n",
-    "output_csv = \"bounding_boxes.csv\"\n",
+    "input_folder = \"sequences_bis\"\n",
+    "output_csv = \"bounding_boxes_all.csv\"\n",
+    "EXPAND_RATIO = 1.1  # Augmenter de 10% de chaque côté\n",
     "\n",
     "def get_bounding_box(image_path):\n",
-    "    \"\"\"Retourne la bounding box du masque blanc sur fond noir.\"\"\"\n",
-    "    image = cv2.imread(image_path, cv2.IMREAD_GRAYSCALE)  # Charger en niveaux de gris\n",
-    "    _, thresh = cv2.threshold(image, 127, 255, cv2.THRESH_BINARY)  # Seuillage\n",
-    "    contours, _ = cv2.findContours(thresh, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)  # Trouver les contours\n",
+    "    \"\"\"Retourne la bounding box du masque blanc sur fond noir avec un léger agrandissement.\"\"\"\n",
+    "    image = cv2.imread(image_path, cv2.IMREAD_GRAYSCALE)\n",
+    "    _, thresh = cv2.threshold(image, 127, 255, cv2.THRESH_BINARY)\n",
+    "    contours, _ = cv2.findContours(thresh, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
     "\n",
     "    if not contours:\n",
     "        return None  # Aucun objet détecté\n",
     "\n",
-    "    x_min, y_min, w, h = cv2.boundingRect(max(contours, key=cv2.contourArea))  # Plus grand contour\n",
+    "    x_min, y_min, w, h = cv2.boundingRect(max(contours, key=cv2.contourArea))\n",
     "    x_max, y_max = x_min + w, y_min + h\n",
     "\n",
+    "    # Agrandir la bbox\n",
+    "    x_center, y_center = (x_min + x_max) // 2, (y_min + y_max) // 2\n",
+    "    new_w, new_h = int(w * EXPAND_RATIO), int(h * EXPAND_RATIO)\n",
+    "\n",
+    "    x_min = max(0, x_center - new_w // 2)  # Évite les valeurs négatives\n",
+    "    y_min = max(0, y_center - new_h // 2)\n",
+    "    x_max = x_min + new_w\n",
+    "    y_max = y_min + new_h\n",
+    "\n",
     "    return (x_min, y_min, x_max, y_max)\n",
+    "\n",
     "\n",
     "# Lire toutes les images du dossier et extraire les bounding boxes\n",
     "data = []\n",
